[project]
authors = [{name = "Daniel San José Pro", email = "42489409+danielsanjosepro@users.noreply.github.com"}]
dependencies = []
name = "lerobot_policy_unetmeanflow"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
lerobot_policy_unetmeanflow = { path = ".", editable = true }
lerobot = { path = "../lerobot/",  extras = ["pusht"], editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pynput = ">=1.8.1,<2"
rerun-sdk = "==0.21.0"
